--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,10 @@ input {
   flex: 0 0 50%;
   max-width: 50%;
 }
+.col-md-5 {
+  flex: 0 0 auto;
+  width: 41.66666667%;
+}
 .center {
   text-align: center;
 }
@@ -106,26 +110,24 @@ input {
 }
 .neoStore {
   font-size: 30px;
-  font-weight: 700;
   letter-spacing: 1.5px;
-  color: #bb0100;
 }
 .heading {
-  padding: 20px 0px 0px 0px;
+  padding: 20px 0px;
 }
 .login,
 .signup {
   box-shadow: 0px 0px 15px 2px #0000000f;
   border-radius: 20px;
   width: 451px;
-  height: 556px;
+  height: 547px;
   padding: 62px 39px;
 }
 .signup {
   width: 480px;
   height: 671px;
 }
-.text-danger {
+.text-red {
   color: #e91b1a;
 }
 .text-white {
@@ -134,7 +136,7 @@ input {
 .text-decoration-none {
   text-decoration: none;
 }
-.font-weight-600 {
+.fw-600 {
   font-weight: 600;
 }
 .justify-content {
@@ -144,7 +146,6 @@ input {
   text-align: center;
   margin-bottom: 3rem;
   font-size: 24px;
-  font-style: normal;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -155,15 +156,31 @@ form .input-text {
 form .password {
   margin-top: 16px;
 }
+.form-control {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0.375rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
 input[type="password"],
 input[type="text"],
 input[type="email"] {
   border: 1px solid #a1a3a3;
   border-radius: 4px;
   color: #696969;
-  width: 100%;
   height: 48px;
-  padding: 14px 15px;
+  padding: 15px;
 }
 .email-input input,
 .password input {
@@ -172,6 +189,9 @@ input[type="email"] {
 .form-check-input {
   width: 18px;
   height: 18px;
+}
+input:focus-visible {
+  outline: none;
 }
 input[type="checkbox"] {
   accent-color: #bb0100;
@@ -194,7 +214,7 @@ input[type="checkbox"] {
 .email button:hover {
   background: #fff;
   color: #bb0100;
-  border: 3px solid #bb0100;
+  border: 1px solid #bb0100;
   transition: background-color 0.3s ease;
 }
 .sign-up {
@@ -209,30 +229,35 @@ input[type="checkbox"] {
   font-weight: 500;
 }
 .sign-up a:hover {
-  color: #000;
+  color: #bb0100;
 }
 .text-end {
   text-align: end;
 }
-.forgot-password {
-  margin-top: 9px;
-}
-.forgot {
+.forgot_password {
   color: #585858;
   font-size: 12px;
+  display: block;
+  text-align: end;
+  margin-top: 8px;
+}
+.forgot_password:hover {
+  transform: scale(1.01);
+  transition: transform 500ms ease-in-out, color 500ms ease-in-out;
+  color: hsl(0deg, 100%, 37%);
 }
 .forgot:hover {
   color: #000000;
 }
 .footer {
-  width: 100%;
-  position: relative;
-  height: auto;
   background-color: #070617;
   margin-top: 2rem;
 }
+.footer .neoStore {
+  margin-bottom: 20px;
+}
 .email {
-  padding: 20px 0px 0px 0px;
+  padding-top: 20px;
   display: inline-block;
 }
 .email button {
@@ -275,15 +300,15 @@ input[type="checkbox"] {
   width: 430px !important;
 }
 .footer .col {
-  width: 157px;
-  height: auto;
+  width: 143px;
+  /* height: auto;
   float: left;
-  box-sizing: border-box;
+  box-sizing: border-box; */
   padding: 34px 0px;
 }
 .footer .services,
 .footer .furniture {
-  width: 218px;
+  width: 197px;
 }
 .services,
 .furniture,
@@ -319,13 +344,12 @@ input[type="checkbox"] {
   color: #7f7f7f;
 }
 .contact h5 {
-  color: #fff;
   font-size: 14px;
   font-weight: 300;
   margin-top: 40px;
 }
 .contact span {
-  margin: 0px 15px 0px 15px;
+  margin: 0px 15px;
 }
 .contact div {
   padding-top: 20px;
@@ -347,16 +371,15 @@ input[type="checkbox"] {
   background: #4e4e4e;
 }
 .social-icons {
-  margin-top: 10px;
+  margin-top: 20px;
+  display: flex;
 }
 .top-bar,
 .bottom-bar {
   background: #bb0100;
   color: #fff;
-  padding: 13px;
   text-align: center;
   padding: 14px;
-  font-size: 16px;
   font-weight: 400;
 }
 .bottom-bar {
@@ -378,7 +401,7 @@ input[type="checkbox"] {
   .container-md,
   .container-lg,
   .container-xl {
-    max-width: 1210px;
+    max-width: 1140px;
   }
 }
 @media only screen and (max-width: 1024px) {
@@ -395,7 +418,8 @@ input[type="checkbox"] {
   }
 }
 @media only screen and (max-width: 950px) {
-  .col-md-6 {
+  .col-md-6,
+  .col-md-5 {
     flex: 0 0 100%;
     max-width: 100%;
   }
@@ -414,11 +438,12 @@ input[type="checkbox"] {
   .justify-content {
     justify-content: center;
   }
-  .login {
-    margin-top: 20px;
-  }
+  .login,
   .signup {
     margin-top: 20px;
+  }
+  .social-icons {
+    justify-content: center;
   }
 }
 @media only screen and (max-width: 575px) {
@@ -460,7 +485,6 @@ input[type="checkbox"] {
   }
   input[type="password"],
   input[type="text"] {
-    padding: 14px 20px 14px 15px;
+    padding: 14px 0px;
   }
 }
-
